--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,25 @@
 group 'com.pal'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
+apply from: "$rootDir/dependencies.gradle"
 
-sourceCompatibility = 1.8
+subprojects {
 
-repositories {
-    mavenCentral()
-}
+    apply plugin: 'java'
+    apply plugin: 'war'
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+
+    dependencies {
+        compile libs.common
+        testCompile libs.test
+    }
+    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+
 }
