--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,9 @@
 rootProject.name = 'finance'
+include 'util'
+include 'api'
+include 'entity'
+include 'manager'
+include 'quartz'
+include 'saller'
+include 'swagger'
 
